# qrcode.show

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Procfile  README.md  README.txt  app.json  rustfmt.toml
.github/: FUNDING.yml
axum-server/: Cargo.toml
axum-server/src/: main.rs
cf-worker/: Cargo.toml  wrangler.toml
cf-worker/src/: lib.rs
examples/nodejs/: README.md  index.js
libs/: Cargo.toml
libs/src/: gen.rs  lib.rs
src/: lib.rs  main.rs
src/templates/: base.html
static/: browserconfig.xml  manifest.json
static/__res__/: qr.txt
templates/: base.html
