[package]
name = "qrcode-show"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.4"
hyper = { version = "0.14.12", features = ["full"] }
lazy_static = "1.4.0"
qrcode = { version = "0.12.0", default-features = false, features = ["svg"] }
tokio = { version = "1.11.0", features = ["full"] }
tower-http = { version = "0.1.1", features = ["fs", "trace"] }
tracing = "0.1.27"
tracing-subscriber = "0.2.22"

[[bin]]
name = "server"
